# GameObjects-Structure

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  README.md  RectangleShape.cpp  RectangleShape.hpp
Current App Files/: .gitignore  Application.cpp  Application.hpp  GameObject.cpp  GameObject.hpp  Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  main.cpp
IKS Engine/Shapes/: CircleShape.cpp  CircleShape.hpp  DefaultShape.cpp  DefaultShape.hpp  LineShape.cpp  LineShape.hpp  RectangleShape.cpp  RectangleShape.hpp
IKS Engine/Window/: RenderWindow.hpp
IKS/Shapes/: CircleShape.hpp  DefaultShape.cpp  DefaultShape.hpp  LineShape.hpp  RectangleShape.hpp
IKS/Window/: RenderWindow.cpp  RenderWindow.hpp
Shapes/: CircleShape.cpp  CircleShape.hpp  LineShape.cpp  LineShape.hpp  RectangleShape.cpp  RectangleShape.hpp
Window/: RenderWindow.cpp  RenderWindow.hpp
